--- a/src/global-components/GlobalTableForm/index.scss
+++ b/src/global-components/GlobalTableForm/index.scss
@@ -2,9 +2,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px 8px;
+  padding: 8px 20px;
   background: #fff;
   border-radius: 4px;
+  box-sizing: border-box;
+
   .left-table-filter {
     flex: 1;
     margin-right: 20px;
