--- a/src/layout/components/topBar/index.scss
+++ b/src/layout/components/topBar/index.scss
@@ -5,10 +5,18 @@
   align-items: center;
   height: 100%;
   padding: 0 16px;
+
   .web-title {
     font-size: 18px;
     color: #000;
+    display: flex;
+    align-items: center;
+
+    .ant-breadcrumb {
+      margin-left: 8px;
+    }
   }
+
   .user-info {
     cursor: pointer;
   }
